Fix two problems with argc handling in bioctl(8), which makes bioctl(8) dump core if expected arguments are not passed in.

Closes PR bin/39946 (patch by Juan RP).