sbin/bioctl/bioctl.c
@@ -1,4 +1,4 @@
-/* $NetBSD: bioctl.c,v 1.12 2009/01/18 00:27:59 lukem Exp $ */
+/* $NetBSD: bioctl.c,v 1.13 2010/02/20 22:25:54 ahoka Exp $ */
 /* $OpenBSD: bioctl.c,v 1.52 2007/03/20 15:26:06 jmc Exp $ */
 
 /*
@@ -31,7 +31,7 @@
 #include <sys/cdefs.h>
 
 #ifndef lint
-__RCSID("$NetBSD: bioctl.c,v 1.12 2009/01/18 00:27:59 lukem Exp $");
+__RCSID("$NetBSD: bioctl.c,v 1.13 2010/02/20 22:25:54 ahoka Exp $");
 #endif
 
 #include <sys/types.h>
@@ -601,7 +601,7 @@ bio_setstate_passthru(int fd, int argc, char **argv)
 	char			*endptr;
 	bool			rem = false;
 
-	if (argc > 3)
+	if (argc < 2 || argc > 3)
 		usage();
 
 	memset(&bs, 0, sizeof(bs));
@@ -640,7 +640,7 @@ bio_setstate_consistency(int fd, int argc, char **argv)
 	struct bioc_setstate	bs;
 	char			*endptr;
 
-	if (argc > 2)
+	if (argc != 2)
 		usage();
 
 	memset(&bs, 0, sizeof(bs));
